--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+appdirs==1.4.4
+arabic-reshaper==3.0.0
 asgiref==3.8.1
+asn1crypto==1.5.1
+asyncio==3.4.3
+attrs==25.3.0
+Brotli==1.1.0
+CacheControl==0.14.3
+cachetools==5.5.2
+certifi==2025.4.26
 cffi==1.17.1
-cryptography==43.0.1
+channels==4.2.2
+channels_redis==4.2.1
+chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.1.8
+colorama==0.4.6
+cryptography==45.0.2
+cssselect2==0.8.0
+defusedxml==0.7.1
 dj-database-url==2.3.0
 Django==5.1.1
 django-cors-headers==4.3.1
@@ -8,16 +28,80 @@ django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-gis==1.1
 djangorestframework-simplejwt==5.3.1
+firebase-admin==6.8.0
+fonttools==4.58.0
+frozenlist==1.6.0
+google-api-core==2.25.0rc1
+google-api-python-client==2.170.0
+google-auth==2.40.2
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.20.2
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+grpcio-status==1.71.0
 gunicorn==22.0.0
+h11==0.16.0
+html5lib==1.1
+httplib2==0.22.0
+idna==3.10
+importlib_metadata==8.7.0
+lxml==5.4.0
+msgpack==1.1.0
+multidict==6.4.4
+oscrypto==1.3.0
 package_name==0.1
 packaging==24.0
+pdfkit==1.0.0
 pillow==10.3.0
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.4
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
+pydyf==0.11.0
+pyee==11.1.1
+pyfcm==2.0.8
+pyHanko==0.27.1
+pyhanko-certvalidator==0.26.8
 PyJWT==2.8.0
+pyparsing==3.2.3
+pypdf==5.5.0
+pyphen==0.17.2
+pyppeteer==2.0.0
+python-bidi==0.6.6
 python-dotenv==1.0.1
+PyYAML==6.0.2
+qrcode==8.2
+redis==6.1.0
+reportlab==4.4.1
+requests==2.32.3
+rsa==4.9.1
+six==1.17.0
 sqlparse==0.4.4
+svglib==1.5.1
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+tqdm==4.67.1
 typing_extensions==4.13.2
 tzdata==2024.1
+tzlocal==5.3.1
+uritemplate==4.1.1
+uritools==5.0.0
+urllib3==1.26.20
+uvicorn==0.34.2
+weasyprint==65.1
+webencodings==0.5.1
+websockets==10.4
 whitenoise==6.7.0
+wkhtmltopdf==0.2
+xhtml2pdf==0.2.17
+yarl==1.20.0
+zipp==3.21.0
+zopfli==0.2.3.post1
